--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><span>Web</span>Studio</a>
+            <a href=”./index.html”>WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -61,9 +61,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/Rectangle1.jpg" alt="monitor" width="360" height="300"/></li>
-                <li><img src="./images/Rectangle2.jpg" alt="mobile" width="360" height="300"/></li>
-                <li><img src="./images/Rectangle3.jpg" alt="mobile-application" width="360" height="300"/></li>
+                <li><img src="./images/Rectangle1.jpg" alt="monitor" width="360" height="300" /></li>
+                <li><img src="./images/Rectangle2.jpg" alt="mobile" width="360" height="300" /></li>
+                <li><img src="./images/Rectangle3.jpg" alt="mobile-application" width="360" height="300" /></li>
             </ul>
         </section>
 
@@ -71,22 +71,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="260"/>
+                    <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="Tom Ford" width="264" height="260"/>
+                    <img src="./images/img2.jpg" alt="Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="260"/>
+                    <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" height="260"/>
+                    <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -97,7 +97,7 @@
 
     <footer>
 
-        <a href="/"><span>Web</span>Studio</a>
+        <a href=”./index.html”>WebStudio</a>
 
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
